@@ -4,9 +4,15 @@ import org.springframework.lang.NonNull;
 import com.prosilion.nostr.tag.BaseTag;
 
 import java.util.Collection;
+import java.util.HashMap;
 import java.util.List;
-import java.util.Optional;
+import java.util.Map;
+import java.util.Objects;
+import java.util.function.Function;
+import java.util.function.BiFunction;
+import java.util.stream.Collectors;
 import com.prosilion.superconductor.lib.jpa.dto.AbstractTagDto;
+import com.prosilion.superconductor.lib.jpa.dto.ConcreteTagDto;
 import com.prosilion.superconductor.lib.jpa.entity.AbstractTagJpaEntity;
 import com.prosilion.superconductor.lib.jpa.entity.join.EventEntityAbstractJpaEntity;
 import com.prosilion.superconductor.lib.jpa.repository.AbstractTagJpaEntityRepository;
@@ -20,24 +26,52 @@ public interface TagPlugin<
     T extends EventEntityAbstractTagJpaEntityRepository<S>> // event -> dto join table
 {
   String getCode();
-  AbstractTagDto getTagDto(P baseTag);
+  Function<P, R> getEntityFactory();
+  BiFunction<Long, Long, S> getJoinFactory();
   AbstractTagJpaEntityRepository<R> getRepo();
   EventEntityAbstractTagJpaEntityRepository<S> getJoin();
-  S getEventEntityTagJpaEntity(Long eventId, Long baseTagId);
+
+  default AbstractTagDto getTagDto(P baseTag) {
+    return new ConcreteTagDto<>(baseTag, getEntityFactory());
+  }
+
+  default S getEventEntityTagJpaEntity(Long eventId, Long tagId) {
+    return getJoinFactory().apply(eventId, tagId);
+  }
 
   default R convertDtoToJpaEntity(@NonNull P baseTag) {
-    return (R) getTagDto(baseTag).convertDtoToJpaEntity();
+    return getEntityFactory().apply(baseTag);
   }
 
   default List<R> getTags(@NonNull Long eventId) {
-    return getJoin()
-        .findByEventId(eventId)
-        .stream()
-        .map(event -> Optional.of(
-                getRepo().findById(
-                    event.getId()))
-            .orElseGet(Optional::empty).stream().toList())
-        .flatMap(Collection::stream).distinct().toList();
+    return getRepo().findAllById(
+        getJoin().findByEventId(eventId).stream()
+            .map(EventEntityAbstractJpaEntity::getTagId)
+            .distinct()
+            .toList()
+    );
+  }
+
+  default Map<Long, List<R>> getTagsByEventIds(@NonNull Collection<Long> eventIds) {
+    Map<Long, List<Long>> eventToTagIds = getJoin().findByEventIdIn(eventIds).stream()
+        .collect(Collectors.groupingBy(
+            EventEntityAbstractJpaEntity::getEventId,
+            Collectors.mapping(EventEntityAbstractJpaEntity::getTagId, Collectors.toList())));
+
+    List<Long> allTagIds = eventToTagIds.values().stream()
+        .flatMap(List::stream).distinct().collect(Collectors.toList());
+
+    Map<Long, R> tagsById = getRepo().findAllById(allTagIds).stream()
+        .collect(Collectors.toMap(AbstractTagJpaEntity::getId, Function.identity()));
+
+    Map<Long, List<R>> result = new HashMap<>();
+    eventToTagIds.forEach((eventId, tagIds) ->
+        result.put(eventId, tagIds.stream()
+            .map(tagsById::get)
+            .filter(Objects::nonNull)
+            .distinct()
+            .collect(Collectors.toList())));
+    return result;
   }
 
   default void saveTag(@NonNull Long eventId, @NonNull P baseTag) {
